# Flux

./: .gitignore  .gitmodules  AGENTS.md  README.md  Untitled  about_project.md  arch_review.md  branding.md  dataset_cap.py  equipment.txt  ignition_flux_project  mkdocs.yml  performance.md  perspective_test.md  plan_pick_up.md  pyproject.toml  site_audit.md  tag.json  tags.txt  test_audit.md  test_log.md
deep/: README.md  pyproject.toml
deep/examples/hello_world/: README.md  hello_world.l5x  manifest.json
deep/examples/hello_world/openplc/: hello_world.st
deep/src/flux_deep/: __init__.py  cli.py  hello_world.py  openplc.py  openplc_editor.py  rll.py
deep/src/flux_deep/plc/: __init__.py
deep/src/flux_deep/plc/plickir/: __init__.py  ir.py  ld.py  normalize.py  rockwell.py
deep/tests/: test_cli.py  test_hello_world.py  test_openplc_integration.py
mine/: pyproject.toml
mine/src/flux_mine/: __init__.py  cli.py  imports.py
mine/src/flux_mine/hmi/: __init__.py  factorytalk.py  tag_refs.py
mine/src/flux_mine/plc/: __init__.py  l5k.py  l5x.py  models.py  parsers.py
mine/src/flux_mine/reconcile/: __init__.py  plc_hmi.py
mine/tests/: test_factorytalk.py  test_imports.py  test_l5k.py  test_l5x.py  test_reconcile.py
sim/: README.md  pyproject.toml
sim/src/flux_sim/: __init__.py  addressing.py  behavior.py  cli.py  configure_ignition.py  export_field_config.py  field_config.py  ignition.py  prepare_online.py  provider_import.py  reconstruction.py  runtime.py  tag_data.py  value_profile.py
sim/src/flux_sim/tag_mode/: __init__.py  base.py  ignore_write.py  immediate.py  registry.py  slow_response.py  write_to_other_tag_response.py
sim/tests/: test_addressing.py  test_behavior.py  test_field_config.py  test_ignition.py  test_integration_preserved_tree_ignition.py  test_integration_sim_to_ignition.py  test_provider_import.py  test_reconstruction.py  test_runtime.py  test_tag_data.py  test_tag_mode.py  test_value_profile.py
web/Flux/: .env.example  README.md  manage.py  pyproject.toml
web/Flux/docs/: architecture-roadmap.md
web/Flux/field/: README.md  field-config.json
web/Flux/src/dashboard/: admin.py  copy_context.py  forms.py  models.py  services.py  test_e2e_playwright.py  tests.py  urls.py  views.py
web/Flux/src/dashboard/migrations/: 0001_initial.py  0002_ensure_ignition_bridge_table.py  0003_ignitionbridgeconfig_role.py  0004_move_ignition_bridge_to_flux_bridge.py
web/Flux/src/dashboard/templatetags/: comp_cards.py
web/Flux/src/flux/: asgi.py  e2e.py  links.py  pagination.py  settings.py  urls.py  web_pulse.py  wsgi.py
web/Flux/src/flux/base/: admin.py  annotations.py  apps.py  field_config.py  field_selectors.py  models.py  runtime.py  runtime_extremes.py  services.py  tests.py
web/Flux/src/flux/bridge/: apps.py  models.py  services.py
web/Flux/src/flux/cell/: apps.py  models.py  services.py  test_e2e_playwright.py  tests.py  urls.py  views.py
web/Flux/src/flux/chart/: __init__.py  annotation_bridge.py  annotations.py  cache.py  control.py  data_plane.py  importer.py  questdb_data_plane.py  routes.py  selectors.py  urls.py  views.py
web/Flux/src/flux/charts/: __init__.py  annotation_bridge.py  annotations.py  cache.py  control.py  data_plane.py  importer.py  questdb_data_plane.py  routes.py  selectors.py  urls.py  (+1 more)
web/Flux/src/runtime/: admin.py  extremes.py  models.py  scheduler.py  tests.py
(+728 files in other folders)
