[project]
name = "flux-deep"
version = "0.1.0"
description = "Isolated Flux.Deep core for OpenPLC-backed PLC emulation experiments."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
flux-deep = "flux_deep.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flux_deep"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
