[project]
name = "flux-mine"
version = "0.1.0"
description = "Flux.mine core parsers and reconciliation primitives."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
flux-mine = "flux_mine.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flux_mine"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
