[project]
name = "flux-sim"
version = "0.1.0"
description = "Standalone Flux simulator core for importing and materializing Ignition tag provider exports."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
flux-sim-import-provider = "flux_sim.cli:main"
flux-sim-export-field-config = "flux_sim.export_field_config:main"
flux-sim-prepare-online = "flux_sim.prepare_online:main"
flux-sim-configure-ignition = "flux_sim.configure_ignition:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flux_sim"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: opt-in tests requiring live Ignition, Fluxy WebDev, and Flux FieldAgent",
]
